# rok

./: .gitignore  .rokrc.example  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.md  IMPROVEMENT_PLAN.md  PLAN.md  PROGRESS.md  README.md  ROADMAP.md  STRUCT.md  TODO.md  plan.md  rok-orm-plan.md  rok.md  todo.md  usage.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_spec.md
.github/workflows/: ci.yml  deploy-docs.yml
.qwen/: settings.json
.rok/templates/my-template/: .rok-template.json  template.txt
crates/rok-auth/: Cargo.toml
crates/rok-auth/src/: claims.rs  error.rs  jwt.rs  lib.rs  password.rs  session.rs
crates/rok-cli/: Cargo.toml
crates/rok-cli/benches/: runner_bench.rs
crates/rok-cli/examples/: generate-crud.json
crates/rok-cli/examples/completions/: main.rs
crates/rok-cli/src/: cache.rs  cli.rs  config.rs  config_file.rs  error.rs  lib.rs  main.rs  progress.rs  schema.rs
crates/rok-cli/src/steps/: bash.rs  checkpoint.rs  cp.rs  dead_code.rs  deps.rs  http.rs  mod.rs  mv.rs  patch.rs  read.rs  refactor.rs  replace.rs  snapshot.rs  template_discovery.rs  write.rs
crates/rok-config/: Cargo.toml
crates/rok-config/src/: builder.rs  env.rs  error.rs  lib.rs  loader.rs  value.rs
crates/rok-config/tests/: integration.rs
crates/rok-deploy/: Cargo.toml
crates/rok-deploy/src/: compose.rs  config.rs  dockerfile.rs  kubernetes.rs  lib.rs
crates/rok-deploy/tests/: integration.rs
crates/rok-generate/: Cargo.toml
crates/rok-generate/src/: error.rs  generator.rs  lib.rs  templates.rs
crates/rok-generate/tests/: integration.rs
crates/rok-http/: Cargo.toml
crates/rok-http/src/: app.rs  error.rs  lib.rs
crates/rok-http/src/middleware/: auth.rs  cors.rs  mod.rs  request_id.rs
crates/rok-lint/: Cargo.toml
crates/rok-lint/src/: diagnostic.rs  lib.rs  linter.rs
crates/rok-lint/src/rules/: long_line.rs  mod.rs  todo_comment.rs  trailing_whitespace.rs
crates/rok-lint/tests/: integration.rs
crates/rok-migrate/: Cargo.toml
crates/rok-migrate/src/: error.rs  lib.rs  loader.rs  migration.rs  migrator.rs  runner.rs
crates/rok-orm/: Cargo.toml
crates/rok-orm-core/: Cargo.toml
crates/rok-orm-core/src/: condition.rs  lib.rs  model.rs  query.rs
crates/rok-orm-macros/: Cargo.toml
crates/rok-orm-macros/src/: lib.rs
crates/rok-orm/src/: executor.rs  lib.rs  pg_model.rs
crates/rok-orm/tests/: integration.rs
crates/rok-test/: Cargo.toml
crates/rok-test/src/: env.rs  fixture.rs  json.rs  lib.rs
crates/rok-utils/: Cargo.toml
crates/rok-utils/src/: fs.rs  lib.rs  path.rs  result.rs  string.rs
crates/rok-utils/tests/: integration.rs
docs/: .cta.json  ARCHITECTURE.md  README.md  api.html  api.md  index.html  package.json  rok.1  serve.json  tanstack-start.config.ts
docs/content/: CONTRIBUTING.md  ECOSYSTEM.md  IMPROVEMENT_PLAN.md  PLAN.md  README.md
docs/guides/: getting-started.md  step-types.md
docs/public/: BRAND.md
docs/src/: routeTree.gen.ts  styles.css
docs/src/components/: Header.tsx
docs/src/routes/: __root.tsx  index.tsx
docs/src/routes/crates/: rok-auth.tsx  rok-cli.tsx  rok-http.tsx  rok-migrate.tsx  rok-orm.tsx  rok-utils.tsx
docs/src/routes/guide/: installation.tsx
examples/: batch-imports.json  ci-pipeline.json  docs_server.rs  full-stack-feature.json  refactor-rename.json
meta/: AGENT.md  DEVELOPMENT.md  WORKSPACE_PLAN.md
meta/archive/: TODO.md  rok-orm-cli.md
migrations/: 0001_create_posts.sql
scripts/: completions.sh  dev.sh  install.sh  publish.sh  serve-docs.sh
src/: cli.rs  config.rs  config_file.rs  error.rs  lib.rs  main.rs  output.rs  progress.rs  refs.rs  runner.rs  schema.rs
src/steps/: boilerplate.rs  cp.rs  dead_code.rs  deps.rs  diff.rs  extract.rs  git.rs  grep.rs  import.rs  lint.rs  mkdir.rs  mod.rs  mv.rs  read.rs  replace.rs  rm.rs  scan.rs  snapshot.rs  summarize.rs  template.rs  template_discovery.rs  write.rs
tests/: integration_test.rs
tools/rok-docs/: Cargo.toml
tools/rok-docs/src/: main.rs
tools/rok-gen-api/: Cargo.toml
tools/rok-gen-api/src/: main.rs
tools/rok-gen-model/: Cargo.toml
tools/rok-gen-model/src/: main.rs
