[package]
name = "rok-cli"
version = "0.8.0"
edition = "2021"
description = "Run One, Know All - Execute multi-step tasks from JSON"
readme = "README.md"
license = "MIT"
authors = ["Ateeq <ateeq@ateeq.me>"]
repository = "https://github.com/ateeq1999/rok"
homepage = "https://github.com/ateeq1999/rok"
keywords = ["cli", "json", "automation", "task-runner", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
regex = "1"
glob = "0.3"
globset = "0.4"
anyhow = "1"
colored = "2"
similar = "2"
toml = "0.8"
serde_yaml = "0.9"
dotenvy = "0.15"
tera = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
git2 = "0.19"
tar = "0.4"
flate2 = "1"
chrono = "0.4"
dirs = "5"

[[bin]]
name = "rok"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "runner_bench"
harness = false
