[workspace]
resolver = "2"
members = [
    # ── library crates ────────────────────────────────────────────────────────
    "crates/rok-cli",
    "crates/rok-utils",
    "crates/rok-config",
    "crates/rok-http",
    "crates/rok-auth",
    "crates/rok-lint",
    "crates/rok-test",
    "crates/rok-generate",
    "crates/rok-deploy",
    "crates/rok-orm/rok-orm-core",
    "crates/rok-orm/rok-orm-macros",
    "crates/rok-orm",
    "crates/rok-migrate",
    # ── standalone CLI tools ──────────────────────────────────────────────────
    "tools/rok-gen-model",
    "tools/rok-gen-api",
    "tools/rok-docs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ateeq <ateeq@ateeq.me>"]
repository = "https://github.com/ateeq1999/rok"
homepage = "https://github.com/ateeq1999/rok"
keywords = ["cli", "json", "automation", "ai"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
# Error handling
thiserror = "1"
anyhow = "1"
# CLI
clap = { version = "4", features = ["derive"] }
# HTTP / web
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
hyper = { version = "1", features = ["full"] }
# Auth
jsonwebtoken = "9"
argon2 = "0.5"
# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
# Code generation / AST
heck = "0.5"
tera = "1"
regex = "1"
# Proc-macro utilities
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
