[package]
name = "rok-cli"
version = "0.10.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Run One, Know All - Execute multi-step tasks from JSON"
readme = "../../README.md"
keywords = ["cli", "json", "automation", "task-runner", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".qwen/**/*", ".claude/**/*", ".git/**/*"]

[dependencies]
rok-config = { path = "../rok-config", version = "0.1.0" }
rok-generate = { path = "../rok-generate", version = "0.1.0" }
rok-migrate = { path = "../rok-migrate", version = "0.1.0" }
rok-utils = { path = "../rok-utils", version = "0.1.0" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1"
walkdir = "2"
regex = "1"
glob = "0.3"
globset = "0.4"
colored = "2"
similar = "2"
dotenvy = "0.15"
git2 = "0.19"
tar = "0.4"
flate2 = "1"
chrono = "0.4"
dirs = "5"
indicatif = "0.17"
atty = "0.2"

[[bin]]
name = "rok"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
criterion = "0.5"
clap_complete = "4"

[[bench]]
name = "runner_bench"
harness = false

[[example]]
name = "completions"
path = "examples/completions/main.rs"
