[package]
name = "rok-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation for the rok ecosystem"
keywords = ["codegen", "scaffold", "tera", "rok"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
