[package]
name = "rok-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Database migration runner for the rok ecosystem"
keywords = ["migration", "database", "sql", "rok"]
categories = ["database"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
