[package]
name = "rok-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Database migration runner for the rok ecosystem"
keywords = ["migration", "database", "sql", "rok"]
categories = ["database"]

[features]
## Enable the async PostgreSQL runner (requires a running Postgres instance).
postgres = ["dep:sqlx", "dep:tokio"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
