[package]
name = "rok-orm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core traits and query builder for rok-orm"
keywords = ["orm", "query-builder", "database", "rok"]
categories = ["database"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["macros"] }

[features]
sqlx-postgres = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls"]
sqlx-sqlite  = ["sqlx/sqlite",   "sqlx/runtime-tokio-native-tls"]
