[package]
name = "rok-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared utilities for the rok ecosystem"
keywords = ["utilities", "rok", "filesystem", "string"]
categories = ["utilities"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
