[package]
name = "rok-gen-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Scaffold Axum API handlers and DTOs for the rok ecosystem"
keywords = ["codegen", "api", "axum", "rok", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rok-gen-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
heck = { workspace = true }
rok-generate = { path = "../../crates/rok-generate" }
serde = { workspace = true }
serde_json = { workspace = true }
